landing page greeting and modal styled and media queries created to ensure good UX on smallest devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
+
 * {
     box-sizing: border-box;
 }
 
-html{
-    min-height: 100vh;
+body, html {
+  height: 100%;
 }
+
+/*html{
+    min-height: 100vh;
+}*/
 
 body {
     font-family: 'Courier Prime', monospace;
@@ -22,12 +27,62 @@ margin-left: 105px;
     font-size: larger;
 }
 
-
-
-.game-body{
-    margin: 0;
-    background: radial-gradient(#bfbfbf, #cccccc);
+/*https://www.w3schools.com/howto/howto_css_blurred_background.asp*/
+.bg-image {
+  background-image: url("/assets/images/officeback.jpg");
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 15px;
+}
+
+#greeting{
+    margin-top: 50px;
+}
+
+#meetup{
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
+.entry{
+    margin-bottom: 25px;
+}
+
+.entry-button{
+     background-color: #7FFF00;
+}
+
+.entry-button:hover{
+    background-color: #DCDCDC;
+}
+
+.modal-button{
+     background-color: #7FFF00;
+     color: #000000; 
+     border-radius: 15px;
+}
+
 
 .cardgame-container{
     display: grid;
@@ -66,8 +121,6 @@ margin-left: 105px;
   font-size: 55px;
 }
 
-
-
 .copyright {
     text-align: center;
   font-family: 'Courier Prime', monospace;
@@ -89,7 +142,19 @@ margin-left: 105px;
   }
 }
 
+@media(max-width: 320px){
+    #meetup{
+     display: none;
+    }
+    .navbar-brand{
+        font-size: 20px;
+    }
+}
 
-
+@media(max-width: 380px){
+    .entry-button{
+     margin-bottom: 10px;
+    }
+}
 
 
